<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Settings</string>
    <string name="generic_enabled">ON</string>
    <string name="generic_disabled">OFF</string>
    <string name="generic_automatic">Automatic</string>
    <string name="generic_help">Help</string>
    <string name="generic_ok">OK</string>
    <string name="generic_cancel">Cancel</string>
    <string name="generic_phone">PHONE</string>
    <string name="generic_network">NETWORK</string>
    <string name="disable_text">Disable</string>
    <string name="enable_text">Enable</string>
    <string name="suggested_settings_battery_saver">Battery saver</string>
    <string name="suggested_settings_summary">Suggested</string>
    <string name="main_general">General</string>
    <string name="main_display">Display</string>
    <string name="main_sound">Sound</string>
    <string name="main_apps">Apps &amp; notifications</string>
    <string name="main_gestures">Gestures</string>
    <string name="main_connectivity">Connectivity</string>
    <string name="main_accessibility">Accessibility</string>
    <string name="main_personal">Personalization</string>
    <string name="main_system">System</string>
    <string name="main_security">Security</string>
    <string name="main_enterprise_privacy">Managed device info</string>
    <string name="pref_watchface">@string/change_watch_face</string>
    <string name="pref_brightness">Adjust brightness</string>
    <string name="adaptive_brightness">Automatic</string>
    <string name="pref_fontSize">Font size</string>
    <string name="pref_screenOrientation">Screen Orientation</string>
    <string name="pref_screenOrientation_labelLeftWrist">Left wrist</string>
    <string name="pref_screenOrientation_labelRightWrist">Right wrist</string>
    <string name="pref_alwaysOnScreen">Always-on screen</string>
    <string name="pref_wetMode">Touch lock</string>
    <string name="pref_touchToWakeAlt">Touch-to-wake</string>
    <string name="enable_ambient_screen">Always-on screen reduces battery life.</string>
    <string name="enable_ambient_screen_subtitle">Turn on?</string>
    <string-array name="text_size_labels">
        
        <item>Small</item>
        
        <item>Normal</item>
        
        <item>Large</item>
    </string-array>
    <string-array name="text_size_entries" translatable="false">
        <item>0.875</item>
        <item>1.0</item>
        <item>1.125</item>
    </string-array>
    <string name="pref_volume">Volume</string>
    <string name="pref_vibrationLevel">Vibration pattern</string>
    <string name="pref_cardPreviews">Notification previews</string>
    <string name="pref_dndOptions">Override Do Not Disturb for\u2026</string>
    <string name="pref_muteWhenOffBody">Do not disturb when off wrist</string>
    <string name="pref_appNotifications">App notifications</string>
    <string name="pref_appNotifications_blockAll">Block all</string>
    <string name="pref_appNotifications_none">Don\'t silence or block</string>
    <string name="pref_appNotifications_silently">Show notifications silently</string>
    <string name="pref_mediaVolume">Media volume</string>
    <string name="pref_accessibilityVolume">Accessibility volume</string>
    <string name="pref_alarmVolume">Alarm volume</string>
    <string name="pref_ringVolume">Ring volume</string>
    <string name="pref_emergencyNotifications">Wireless emergency alerts</string>
    <string name="pref_vibrationLevel_labelNormal">Normal</string>
    <string name="pref_vibrationLevel_labelLong">Long</string>
    <string name="pref_vibrationLevel_labelDouble">Double</string>
    <string name="pref_vip_contacts">Favorite contacts</string>
    <string name="pref_previewMode_labelOff">Off</string>
    <string name="pref_previewMode_labelNormal">Normal</string>
    <string name="pref_previewMode_labelHigh">High</string>
    <string name="pref_previewMode_descOff">Never show</string>
    <string name="pref_previewMode_descNormal">Briefly show</string>
    <string name="pref_previewMode_descHigh">Always show</string>
    <string name="pref_cellular">Mobile</string>
    <string name="pref_cellularToggle">Mobile</string>
    <string name="pref_dataUsage">Data usage</string>
    <string name="pref_resumeData">Resume data</string>
    <string name="pref_resumeData_dialogTitle">Resume data?</string>
    <string name="pref_resumeData_dialogMessage">You\'ve reached your mobile data limit. Resuming may lead to charges from your carrier.</string>
    <string name="pref_dataRoaming">Data roaming</string>
    <string name="pref_dataRoaming_dialogTitle">Attention</string>
    <string name="pref_dataRoaming_dialogMessage">Allow data usage when roaming? Significant charges may apply.</string>
    <string name="pref_unlockSim">Unlock SIM</string>
    <string name="pref_lockSimCard">Require SIM lock</string>
    <string name="pref_changeSimPin">Change SIM PIN</string>
    <string name="pref_simStatus">SIM status</string>
    <string name="pref_callForwarding">Call forwarding from phone</string>
    <string name="pref_callForwarding_infoTitle">Set up call forwarding</string>
    <string name="pref_callForwarding_infoMessage">To learn how to forward calls from your phone to your watch, open this help page.</string>
    <string name="pref_callForwarding_turnOn">Turn on call forwarding</string>
    <string name="pref_callForwarding_turnOff">Turn off call forwarding</string>
    <string name="pref_defaultSms">Default SMS app</string>
    <string name="pref_phoneNumber">Displayed phone number</string>
    <string name="pref_voicemailNumber">Voicemail number</string>
    <string name="pref_advancedSettings">Advanced</string>
    <string name="enterprise_privacy_header">To provide access to your work data, your organization may change settings and install software on your device.\n\nFor more details, contact your organization\'s admin.</string>
    <string name="enterprise_privacy_enterprise_data">Data associated with your work account, such as email and calendar</string>
    <string name="enterprise_privacy_installed_packages">List of apps on your device</string>
    <string name="enterprise_privacy_usage_stats">Amount of time and data spent in each app</string>
    <string name="enterprise_privacy_network_logs">Most recent network traffic log</string>
    <string name="enterprise_privacy_bug_reports">Most recent bug report</string>
    <string name="enterprise_privacy_security_logs">Most recent security log</string>
    <string name="enterprise_privacy_enterprise_installed_packages">Apps installed</string>
    <string name="enterprise_privacy_location_access">Location permissions</string>
    <string name="enterprise_privacy_microphone_access">Microphone permissions</string>
    <string name="enterprise_privacy_camera_access">Camera permissions</string>
    <string name="enterprise_privacy_enterprise_set_default_apps">Default apps</string>
    <string name="enterprise_privacy_always_on_vpn_work">Always-on VPN turned on in your work profile</string>
    <string name="enterprise_privacy_input_method">Default keyboard</string>
    <string name="enterprise_privacy_global_http_proxy">Global HTTP proxy set</string>
    <string name="enterprise_privacy_ca_certs_personal">Trusted credentials in your personal profile</string>
    <string name="enterprise_privacy_ca_certs_work">Trusted credentials in your work profile</string>
    <string name="enterprise_privacy_lock_device">Admin can lock the device and reset password</string>
    <string name="enterprise_privacy_wipe_device">Admin can delete all device data</string>
    <string name="enterprise_privacy_failed_password_wipe_device">Failed password attempts before deleting all device data</string>
    <string name="enterprise_privacy_failed_password_wipe_work">Failed password attempts before deleting work profile data</string>
    <string name="pref_about">About</string>
    <string name="info_label_model">Model</string>
    <string name="info_label_device_name">Device name</string>
    <string name="info_label_version">Versions</string>
    <string name="info_value_version">Tap to view</string>
    <string name="info_label_serial">Serial number</string>
    <string name="info_label_msn">MSN</string>
    <string name="info_label_build">Build number</string>
    <string name="info_label_connection">Connection</string>
    <string name="info_label_regulator_information">Regulatory information</string>
    <string name="info_label_legal_notices">Legal notices</string>
    <string name="info_label_battery">Battery</string>
    <string name="info_label_system_update">System updates</string>
    <string name="status_imei">IMEI</string>
    <string name="action_open_on_phone">Open on phone</string>
    <string name="data_usage_activity_title">Watch data usage</string>
    <string name="toggle_data_limit_action">Set data limit</string>
    <string name="toggle_data_connectivity_action">Mobile data</string>
    <string name="data_usage_limit_dialog_title">Limiting data usage</string>
    <string name="data_usage_limit_dialog_subtitle">Once the limit is reached, mobile data will turn off.\n\nYour watch and your carrier may measure data usage differently, so consider setting a conservative limit.</string>
    <string name="set_data_limit_action">Data limit</string>
    <string name="set_warning_level_action">Warning level</string>
    <string name="show_app_usage_action">App usage</string>
    <string name="data_limit_chooser_title">Data limit</string>
    <string name="data_limit_chooser_warning_level_title">Warning level</string>
    <string name="cycle_day_chooser_title">Cycle start day</string>
    <string name="default_sms_title">Default SMS app</string>
    <string name="sim_status_title_network">Network</string>
    <string name="sim_status_title_signal_strength">Signal strength</string>
    <string name="sim_status_title_network_type">Network type</string>
    <string name="sim_status_title_service_state">Service state</string>
    <string name="sim_status_title_roaming_state">Roaming</string>
    <string name="sim_status_title_network_state">Network state</string>
    <string name="sim_status_title_phone_number">Phone number</string>
    <string name="sim_status_title_imei">IMEI</string>
    <string name="sim_status_title_imei_sv">IMEI SV</string>
    <string name="sim_status_title_iccid">ICCID</string>
    <string name="emergency_alerts_extreme_threats">Show extreme threats</string>
    <string name="emergency_alerts_severe_threats">Show severe threats</string>
    <string name="emergency_alerts_amber_alerts">Show AMBER alerts</string>
    <string name="emergency_alerts_etws_test_alerts">Show ETWS test alerts</string>
    <string name="emergency_alerts_cmas_test_alerts">Show CMAS test alerts</string>
    <string name="emergency_alerts_alert_reminder">Alert reminder</string>
    <string name="emergency_alerts_vibrate">Vibrate on alert</string>
    <string name="emergency_alerts_duration">Alert sound duration</string>
    <string name="apps_settings">App info</string>
    <string name="app_notifications">App notifications</string>
    <string name="app_permissions">App permissions</string>
    <string name="app_label_uninstall">Uninstall</string>
    <string name="pref_app_about">App Info</string>
    <string name="app_info_label_version">Version</string>
    <string name="app_info_label_storage">Storage</string>
    <string name="app_info_label_data">Data</string>
    <string name="app_info_label_cache">Cache</string>
    <string name="app_info_label_clear_data">Clear data</string>
    <string name="app_info_label_clear_cache">Clear cache</string>
    <string name="app_info_dialog_delete_data_title">Delete app data?</string>
    <string name="app_info_dialog_delete_data_message">All this app\'s data will be permanently deleted. This include all files, settings, accounts, databases, etc.</string>
</resources>