<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:title="@string/pref_cellular"
        android:orderingFromXml="true">
    <SwitchPreference
            android:key="pref_cellularToggle"
            android:title="@string/pref_cellularToggle"
            android:persistent="false" />
    <ListPreference
            android:key="pref_cellularToggleV2"
            android:title="@string/pref_cellularToggle"
            android:entries="@array/cellular_state_entries"
            android:summary="%s"
            android:persistent="false" />
    <Preference
            android:key="pref_dataUsage"
            android:title="@string/pref_dataUsage"
            android:icon="@drawable/ic_settings_data_usage"
            android:persistent="false">
        <intent android:targetClass="com.google.android.clockwork.settings.cellular.DataUsageActivity"
                android:targetPackage="com.google.android.apps.wearable.settings" />
    </Preference>
    <android.support.wearable.preference.AcceptDenyDialogPreference
            android:key="pref_resumeData"
            android:title="@string/pref_resumeData"
            android:icon="@drawable/ic_cc_data_usage"
            app:dialogTitle="@string/pref_resumeData_dialogTitle"
            app:dialogMessage="@string/pref_resumeData_dialogMessage"
            android:persistent="false"/>
    <com.google.android.clockwork.settings.RestrictedAcceptDenySwitchPreference
            android:key="pref_dataRoaming"
            android:title="@string/pref_dataRoaming"
            app:dialogTitle="@string/pref_dataRoaming_dialogTitle"
            app:dialogMessage="@string/pref_dataRoaming_dialogMessage"
            android:persistent="false"/>
    <Preference
            android:key="pref_simStatus"
            android:title="@string/pref_simStatus"
            android:icon="@drawable/ic_settings_sim_card"
            android:persistent="false"
            android:fragment="com.google.android.clockwork.settings.cellular.SimStatusFragment" />
    <Preference
            android:key="pref_unlockSim"
            android:title="@string/pref_unlockSim"
            android:icon="@drawable/ic_cc_unlock"
            android:persistent="false"/>
    <SwitchPreference
            android:key="pref_lockSimToggle"
            android:title="@string/pref_lockSimCard"
            android:persistent="false"/>
    <Preference
            android:key="pref_changeSimPin"
            android:title="@string/pref_changeSimPin"
            android:icon="@drawable/ic_cc_unlock"
            android:persistent="false"/>
    <android.support.wearable.preference.WearableDialogPreference
            android:key="pref_callForwarding"
            android:title="@string/pref_callForwarding"
            android:icon="@drawable/ic_cc_settings_call_forwarding"
            android:positiveButtonText="@string/pref_callForwarding_turnOn"
            app:positiveButtonIcon="@drawable/action_accept"
            app:neutralButtonText="@string/action_open_on_phone"
            app:neutralButtonIcon="@drawable/action_open_on_phone"
            android:negativeButtonText="@string/pref_callForwarding_turnOff"
            app:negativeButtonIcon="@drawable/action_no_thanks"
            android:persistent="false"/>
    <android.support.wearable.preference.WearableDialogPreference
            android:key="pref_callForwardingIos"
            android:title="@string/pref_callForwarding"
            android:icon="@drawable/ic_cc_settings_call_forwarding"
            android:dialogTitle="@string/pref_callForwarding_infoTitle"
            android:dialogMessage="@string/pref_callForwarding_infoMessage"
            android:positiveButtonText="@null"
            app:neutralButtonText="@string/action_open_on_phone"
            app:neutralButtonIcon="@drawable/action_open_on_phone"
            android:negativeButtonText="@null"
            android:persistent="false"/>
    <ListPreference
            android:key="pref_defaultSms"
            android:title="@string/pref_defaultSms"
            android:dialogTitle="@string/default_sms_title"
            android:icon="@drawable/ic_settings_sms_app"
            android:negativeButtonText="@null"
            android:persistent="false"/>
    <Preference
            android:key="pref_phoneNumber"
            android:title="@string/pref_phoneNumber"
            android:icon="@drawable/ic_settings_device_only"
            android:persistent="false"/>
    <Preference
            android:key="pref_voicemailNumber"
            android:title="@string/pref_voicemailNumber"
            android:icon="@drawable/ic_settings_voicemail"
            android:persistent="false"/>
    <Preference
            android:key="pref_advancedSettings"
            android:title="@string/pref_advancedSettings"
            android:icon="@drawable/ic_cc_settings_morehorizontal"
            android:fragment="com.google.android.clockwork.settings.cellular.CellularAdvancedFragment"
            android:persistent="false"/>
</PreferenceScreen>
